--- a/RecreationalHazards/RecreationalHazards.csproj
+++ b/RecreationalHazards/RecreationalHazards.csproj
@@ -116,6 +116,7 @@
     <Compile Include="API\Enums\ConsumptionStage.cs" />
     <Compile Include="API\Items\Alcohol.cs" />
     <Compile Include="API\Items\Heroin.cs" />
+    <Compile Include="API\Items\Steroids.cs" />
     <Compile Include="API\RecreationalHazardsApi.cs" />
     <Compile Include="Config.cs" />
     <Compile Include="RecreationalHazards.cs" />
