Added LSD and CrystalMeth

--- a/RecreationalHazards/RecreationalHazards.csproj
+++ b/RecreationalHazards/RecreationalHazards.csproj
@@ -115,7 +115,9 @@
     <Compile Include="API\Entities\EffectProperties.cs" />
     <Compile Include="API\Enums\ConsumptionStage.cs" />
     <Compile Include="API\Items\Alcohol.cs" />
+    <Compile Include="API\Items\CrystalMeth.cs" />
     <Compile Include="API\Items\Heroin.cs" />
+    <Compile Include="API\Items\LSD.cs" />
     <Compile Include="API\Items\Steroids.cs" />
     <Compile Include="API\RecreationalHazardsApi.cs" />
     <Compile Include="Config.cs" />
