--- a/RecreationalHazards/RecreationalHazards.csproj
+++ b/RecreationalHazards/RecreationalHazards.csproj
@@ -115,6 +115,7 @@
     <Compile Include="API\Entities\EffectProperties.cs" />
     <Compile Include="API\Enums\ConsumptionStage.cs" />
     <Compile Include="API\Items\Alcohol.cs" />
+    <Compile Include="API\Items\Cocaine.cs" />
     <Compile Include="API\Items\CrystalMeth.cs" />
     <Compile Include="API\Items\Heroin.cs" />
     <Compile Include="API\Items\LSD.cs" />
